<resources>
    <string name="app_name">PetClan</string>
    <string name="facebook_app_id" translatable="false">1167243230312525</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1167243230312525</string>
    <string name="login_cancel">Login Canceled</string>
    <string name="network_not_found">Network not found</string>
    <string name="locatio_disabled">Location is Disabled</string>
    <string name="provide_location">In order to have functionality you must provide location</string>
    <string name="done_uploading">Done Uploading</string>
    <string name="enable_location">Please enable Location</string>
    <string name="woof">Woof!</string>
    <string name="select_gender">Please select gender</string>
    <string name="enter_kind">Please enter a pet kind</string>
    <string name="enter_first_name">You must enter your first name!</string>
    <string name="enter_last_name">You must enter your last name!</string>
    <string name="enter_pet_name">You must enter a pet name</string>
    <string name="enter_pet_type">You must enter a pet type</string>
    <string name="enter_city_location">Please Enter a City from the list</string>
    <string name="enter_price">Please enter price</string>
    <string name="enter_description">Please enter description</string>
    <string name="email">Email</string>
    <string name="valid_email">You must enter a valid email!</string>
    <string name="password">Password</string>
    <string name="valid_password">You must enter at least 8 characters!</string>
    <string name="author_name">Author Name</string>
    <string name="log_out">Log Out</string>
    <string name="unknown">Unknown</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
    <string name="sell_adopt">| Sell/Adopt</string>
    <string name="post">Post</string>
    <string name="friend_name">Friend Name</string>
    <string name="moments_ago">moments ago</string>
    <string name="last_message">last message</string>
    <string name="add_an_ad">Add An Ad</string>
    <string name="choose_action">Choose Action:</string>
    <string name="sell">Sell</string>
    <string name="hand_over">Hand Over</string>
    <string name="choose_category">Choose Category:</string>
    <string name="pet">Pet</string>
    <string name="product">Product</string>
    <string name="gender">Gender:</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="locate_me">locate me</string>
    <string name="publish">Publish</string>
    <string name="write_the_first_comment">Write the First Comment!</string>
    <string name="username">Username</string>
    <string name="unread_messages">Unread Messages</string>
    <string name="contact_me">Contact me</string>
    <string name="item">Item:</string>
    <string name="kind">Kind:</string>
    <string name="publish_date">Publish date:</string>
    <string name="welcome">Welcome!</string>
    <string name="or_sign_in_with">Or sign in with</string>
    <string name="sign_in">Sign In</string>
    <string name="about_to_start">You\'re about to start your adventure…</string>
    <string name="join_our_clan">Join Our Clan</string>
    <string name="high_to_low">High ► Low</string>
    <string name="low_to_high">Low ► High</string>
    <string name="newest">Newest</string>
    <string name="oldest">Oldest</string>
    <string name="most_expensive">Most Expensive</string>
    <string name="cheapest">Cheapest</string>
    <string name="furthest">Furthest</string>
    <string name="closest">Closest</string>
    <string name="about_you">About You</string>
    <string name="who_are_you">Welcome!\nWho are you?</string>
    <string name="or_register_with">Or register with</string>
    <string name="next">Next</string>
    <string name="chat">Chat</string>
    <string name="friends">Friends</string>
    <string name="choose_how_people_see_you">Welcome!\nChoose how people see you</string>
    <string name="your_profile_picture">Choose your profile picture</string>
    <string name="finish">Finish</string>
    <string name="new_message">New Message</string>
    <string name="name">Name</string>
    <string name="at">at</string>
    <string name="likes">Likes</string>
    <string name="comments">Comments</string>
    <string name="like">Like</string>
    <string name="comment">Comment</string>
    <string name="hello">Hello</string>
    <string name="add_a_pet">Add A Pet</string>
    <string name="add">Add</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="feed">Feed</string>
    <string name="chats">Chats</string>
    <string name="marketplace">MarketPlace</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="search_here">Search Here</string>
    <string name="on_your_mind">What\'s On Your Mind?</string>
    <string name="type_your_comment_here">Type your comment here</string>
    <string name="enter_message">Enter Message</string>
    <string name="first_name">First Name</string>
    <string name="large_text" translatable="false">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efficient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="show_more">Show More</string>
    <string name="show_less">Show Less</string>
    <string name="messages_header" translatable="false">Messages</string>
    <string name="sync_header" translatable="false">Sync</string>
    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="type">Type</string>
</resources>