<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layoutDialogContainer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:padding="20dp"
    android:layoutDirection="ltr">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/post_content_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:hint="@string/on_your_mind"
        android:gravity="start|top">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/new_post_content_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:maxHeight="400dp"
            android:minHeight="150dp"
            android:textSize="20sp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/post_content_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/cancel_btn"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textSize="20sp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/post_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:text="@string/update"
            android:textSize="20sp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:textAllCaps="false" />

    </LinearLayout>

</RelativeLayout>