<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/chat_friend_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="5dp"
    app:cardCornerRadius="1dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true"
    app:contentPadding="5dp">

    <RelativeLayout
        android:id="@+id/post_header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp">

        <ImageView
            android:id="@+id/friend_pic_iv"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_default_user_pic" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/friend_pic_iv"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/friend_name_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/friend_name"
                    android:textSize="15sp"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold"
                    android:textAllCaps="false" />

                <TextView
                    android:id="@+id/time_ago_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/friend_name_tv"
                    android:layout_alignParentEnd="true"
                    android:gravity="end"
                    android:text="@string/moments_ago"
                    android:textSize="13sp"
                    android:textAllCaps="false" />

            </RelativeLayout>

            <TextView
                android:id="@+id/last_message_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:ellipsize="end"
                android:text="@string/last_message"
                android:textAllCaps="false"
                android:textSize="13sp" />

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>