<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragments.LoginDetailsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title_1_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="50dp"
            android:gravity="center"
            android:text="@string/welcome"
            android:textSize="30sp"
            android:textColor="@color/colorPrimary"
            android:textAllCaps="false" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_1_tv"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginHorizontal="30dp"
            app:errorEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:hint="@string/email"
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"
                android:inputType="textEmailAddress"
                android:textCursorDrawable="@color/colorPrimary" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/email_layout"
            android:layout_marginVertical="5dp"
            android:layout_marginHorizontal="30dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleDrawable="@drawable/ic_round_enable_password_24"
            app:errorEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:hint="@string/password"
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"
                android:inputType="textPassword"
                android:textCursorDrawable="@color/colorPrimary" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/sign_in_options_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/password_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/or_sign_in_with"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:textAllCaps="false" />

        <LinearLayout
            android:id="@+id/reg_options_btn_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/sign_in_options_tv"
            android:gravity="center">
            <ImageButton
                android:id="@+id/facebook_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginEnd="50dp"
                android:src="@drawable/ic_facebook_btn"
                android:background="@null"
                android:scaleType="centerCrop" />

            <ImageButton
                android:id="@+id/google_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_google_btn"
                android:background="@null"
                android:scaleType="centerCrop" />
        </LinearLayout>

        <Button
            android:id="@+id/sign_in_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/reg_options_btn_layout"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="30dp"
            android:layout_marginHorizontal="30dp"
            style="@style/Widget.MaterialComponents.Button"
            android:text="@string/sign_in"
            android:textSize="20sp"
            android:textAllCaps="false" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/facebook_login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sign_in_btn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:visibility="gone" />

    </RelativeLayout>

</ScrollView>