<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".view.fragments.AddPetFragment">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/add_a_pet"
            android:textSize="30sp"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:textAllCaps="false" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pet_name_et_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="5dp"
            android:hint="@string/enter_pet_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pet_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/colorPrimaryDark"
                android:textCursorDrawable="@null"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pet_type_et_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pet_name_et_layout"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:hint="@string/type">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/item_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/colorPrimaryDark"
                android:textCursorDrawable="@null"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pet_description_et_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pet_type_et_layout"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:hint="@string/Description">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pet_description_et"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:gravity="start"
                android:inputType="textMultiLine"
                android:textColor="@color/colorPrimaryDark"
                android:textCursorDrawable="@null"
                android:textSize="18sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/photos_btns"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/pet_description_et_layout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp">

            <ImageButton
                android:id="@+id/add_image_btn"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/ic_add_image"
                android:scaleType="fitCenter"
                android:background="@null" />

        </LinearLayout>

        <com.example.android2project.model.PhotosPreviewRecyclerview
            android:id="@+id/photos_preview_recycler"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/photos_btns"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp" />

        <Button
            android:id="@+id/add_pet_btn"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/photos_preview_recycler"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/add"
            android:textAllCaps="false" />

    </RelativeLayout>

</ScrollView>